# kucoin

./: Cargo.toml  README.md
src/: lib.rs
src/client/: classic_rest.rs  mod.rs  rest.rs
src/endpoints/: deposit.rs  mod.rs  sub_account.rs  trades.rs  transfer.rs  withdrawals.rs
src/types/: deposit.rs  mod.rs  spot.rs  sup_account.rs  transfer.rs  withdraw.rs
src/types/requests/: deposit_req_type.rs  mod.rs  spot_cancel_req_type.rs  spot_contract_req_type.rs  transfer_req_type.rs
src/types/responses/: deposit_res_type.rs  mod.rs  spot_cancel_res_type.rs  spot_contract_res_type.rs  transfer_res_type.rs
src/utils/: encoder.rs  errors.rs  mod.rs  time.rs
