[package]
name = "kucoin"
version = "0.7.0"
edition = "2024"
description = "A robust and asynchronous Rust client for the KuCoin exchange API."
license = "MIT"
repository = "https://github.com/blackh-t/kucoin"
documentation = "https://docs.rs/kucoin"
readme = "README.md"
keywords = ["kucoin", "crypto", "exchange", "trading", "api"]
categories = ["api-bindings", "cryptography::cryptocurrencies", "finance"]
exclude = [
    ".github/*",
    ".gitignore",
]

[dependencies]
base64 = "0.22.1"
ethers = "2.0.14"
hmac = "0.12.1"
json = "0.12.4"
serde = "1.0.228"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.145"
serde_urlencoded = "0.7.1"
secrecy = "0.8"
uuid = { version = "1.19.0", features = ["v4"] }
thiserror = "2.0.17"
